// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CarouselSlideUnit (Diamond Snapshot) > Admin modunda aktif slide görünümü snapshot ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="
        absolute inset-0 transition-opacity duration-700 ease-in-out 
        rounded-lg overflow-hidden relative w-full h-full
        pointer-events-auto 
        bg-stone-200
      "
    style="opacity: 1; filter: blur(0px); z-index: 10; transform: none;"
  >
    <div
      class="relative w-full h-full overflow-hidden cursor-pointer"
    >
      <div
        class="relative overflow-hidden bg-stone-100 aspect-[4/3] 
            absolute inset-0 w-full h-full object-cover 
            
          "
      >
        <div
          class="absolute inset-0 z-10 flex items-center justify-center bg-stone-50"
          style="opacity: 1;"
        >
          <div
            class="absolute inset-0 shimmer-animation opacity-50"
          />
          <div
            class="relative w-12 h-12 border-2 border-stone-200 border-t-stone-900 rounded-full animate-spin opacity-20"
          />
          <div
            class="absolute inset-0 opacity-[0.03] pointer-events-none"
            style="background-image: radial-gradient(rgb(0, 0, 0) 0.5px, transparent 0.5px); background-size: 16px 16px;"
          />
        </div>
        <img
          alt="Test Başlığı"
          class="
            w-full h-full transition-all duration-700 ease-out
            object-cover
            opacity-0 scale-105 blur-sm
          "
          loading="eager"
          src="https://example.com/slide1.jpg"
        />
      </div>
    </div>
    <div
      class="absolute top-4 right-4 z-[50] flex items-center gap-2"
      style="opacity: 0; transform: translateX(20px);"
    >
      <div
        class="
        relative flex items-center justify-center shadow-2xl transition-all active:scale-95 group border
        bg-white/95 backdrop-blur-md border-white/40 hover:bg-white text-stone-900
        w-10 h-10 rounded-full !w-8 !h-8 sm:!w-10 sm:!h-10
      "
      >
        <div
          class="flex items-center justify-center overflow-hidden w-6 h-full pointer-events-none relative"
        >
          <div
            class="flex items-center justify-center h-full"
            style="opacity: 0; transform: translateY(5px);"
          >
            <span
              class="font-black tracking-tighter flex items-center justify-center text-[14px]"
            >
              1.
            </span>
          </div>
        </div>
        <select
          class="absolute inset-0 w-full h-full opacity-0 cursor-pointer z-[5] appearance-none"
        >
          <option
            value="1"
          >
            1. Sıraya Alalım
          </option>
          <option
            value="2"
          >
            2. Sıraya Alalım
          </option>
          <option
            value="3"
          >
            3. Sıraya Alalım
          </option>
        </select>
      </div>
      <button
        class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-red-50 text-red-600 hover:bg-red-600 hover:text-white 
        px-6 py-3 text-xs gap-2 
        rounded-full aspect-square !p-0 
        
        w-8 h-8 sm:w-10 sm:h-10 shadow-xl border-2 border-white/20
      "
        title="AFİŞİ SİL"
      >
        <div
          class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
        >
          <div
            class="w-3.5 h-3.5 sm:w-5 sm:h-5"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trash2 lucide-trash-2 w-full h-full p-0.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 11v6"
              />
              <path
                d="M14 11v6"
              />
              <path
                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
              />
              <path
                d="M3 6h18"
              />
              <path
                d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CarouselSlideUnit (Diamond Snapshot) > Aktif slide görünümü snapshot ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="
        absolute inset-0 transition-opacity duration-700 ease-in-out 
        rounded-lg overflow-hidden relative w-full h-full
        pointer-events-auto 
        bg-stone-200
      "
    style="opacity: 1; filter: blur(0px); z-index: 10; transform: none;"
  >
    <div
      class="relative w-full h-full overflow-hidden "
    >
      <div
        class="relative overflow-hidden bg-stone-100 aspect-[4/3] 
            absolute inset-0 w-full h-full object-cover 
            
          "
      >
        <div
          class="absolute inset-0 z-10 flex items-center justify-center bg-stone-50"
          style="opacity: 1;"
        >
          <div
            class="absolute inset-0 shimmer-animation opacity-50"
          />
          <div
            class="relative w-12 h-12 border-2 border-stone-200 border-t-stone-900 rounded-full animate-spin opacity-20"
          />
          <div
            class="absolute inset-0 opacity-[0.03] pointer-events-none"
            style="background-image: radial-gradient(rgb(0, 0, 0) 0.5px, transparent 0.5px); background-size: 16px 16px;"
          />
        </div>
        <img
          alt="Test Başlığı"
          class="
            w-full h-full transition-all duration-700 ease-out
            object-cover
            opacity-0 scale-105 blur-sm
          "
          loading="eager"
          src="https://example.com/slide1.jpg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CarouselSlideUnit (Diamond Snapshot) > Pasif (Ghost) slide görünümü snapshot ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="
        absolute inset-0 transition-opacity duration-700 ease-in-out 
        rounded-lg overflow-hidden relative w-full h-full
        pointer-events-none 
        bg-stone-200
      "
    style="opacity: 0.35; filter: blur(2px); z-index: 0; transform: scale(0.95);"
  >
    <div
      class="relative w-full h-full overflow-hidden "
    >
      <div
        class="relative overflow-hidden bg-stone-100 aspect-[4/3] 
            absolute inset-0 w-full h-full object-cover 
            
          "
      >
        <div
          class="absolute inset-0 z-10 flex items-center justify-center bg-stone-50"
          style="opacity: 1;"
        >
          <div
            class="absolute inset-0 shimmer-animation opacity-50"
          />
          <div
            class="relative w-12 h-12 border-2 border-stone-200 border-t-stone-900 rounded-full animate-spin opacity-20"
          />
          <div
            class="absolute inset-0 opacity-[0.03] pointer-events-none"
            style="background-image: radial-gradient(rgb(0, 0, 0) 0.5px, transparent 0.5px); background-size: 16px 16px;"
          />
        </div>
        <img
          alt="Test Başlığı"
          class="
            w-full h-full transition-all duration-700 ease-out
            object-cover
            opacity-0 scale-105 blur-sm
          "
          loading="eager"
          src="https://example.com/slide1.jpg"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
